<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:icon="@drawable/logo"
            android:checkable="false"
            android:title="@string/m1" />
        <item
            android:id="@+id/mainFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/m2" />
        <item
            android:id="@+id/categoryFragment"
            android:icon="@drawable/ic_category"
            android:title="@string/m3" />
        <item
            android:id="@+id/storeFragment"
            android:icon="@drawable/ic_store"
            android:title="@string/m4" />
        <item
            android:id="@+id/liveFragment"
            android:icon="@drawable/ic_live"
            android:title="@string/m5" />
        <item
            android:id="@+id/contactFragment"
            android:icon="@drawable/ic_call"
            android:title="@string/m6" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_about"
            android:title="@string/m7"/>

</menu>