<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.americaalyoum.news.MainFragment"
        android:label="@string/nav1"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_contactFragment"
            app:destination="@id/contactFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_mainFragment_to_liveFragment"
            app:destination="@id/liveFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_mainFragment_to_categoryFragment"
            app:destination="@id/categoryFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_mainFragment_to_aboutFragment"
            app:destination="@id/aboutFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_mainFragment_to_storeFragment"
            app:destination="@id/storeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.americaalyoum.news.CategoryFragment"
        android:label="@string/nav2"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_categoryFragment_to_categoryWorld"
            app:destination="@id/categoryWorld"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_categoryFragment_to_categoryAmerica"
            app:destination="@id/categoryAmerica"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_categoryFragment_to_categoryEgypt"
            app:destination="@id/categoryEgypt"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_categoryFragment_to_categoryJobs"
            app:destination="@id/categoryJobs"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_categoryFragment_to_categoryInAmerica"
            app:destination="@id/categoryInAmerica"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_categoryFragment_to_categorySport"
            app:destination="@id/categorySport"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_categoryFragment_to_categoryEntertainment"
            app:destination="@id/categoryEntertainment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_categoryFragment_to_categoryFinance"
            app:destination="@id/categoryFinance"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_categoryFragment_to_categoryHealth"
            app:destination="@id/categoryHealth"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_categoryFragment_to_categoryHealth2"
            app:destination="@id/categoryHealth"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_categoryFragment_to_categoryInformation"
            app:destination="@id/categoryInformation"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_categoryFragment_to_categoryTechnology"
            app:destination="@id/categoryTechnology"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_categoryFragment_to_categoryImmigration"
            app:destination="@id/categoryImmigration"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_categoryFragment_to_categoryUniversities"
            app:destination="@id/categoryUniversities"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_categoryFragment_to_categoryArabAmerica"
            app:destination="@id/categoryArabAmerica"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/liveFragment"
        android:name="com.americaalyoum.news.LiveFragment"
        android:label="@string/nav3"
        tools:layout="@layout/fragment_live" />
    <fragment
        android:id="@+id/storeFragment"
        android:name="com.americaalyoum.news.StoreFragment"
        android:label="@string/nav4"
        tools:layout="@layout/fragment_store" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.americaalyoum.news.AboutFragment"
        android:label="@string/nav5"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/contactFragment"
        android:name="com.americaalyoum.news.ContactFragment"
        android:label="@string/nav6"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/categoryAmerica"
        android:name="com.americaalyoum.news.category.CategoryAmerica"
        android:label="@string/america_news"
        tools:layout="@layout/category_america" />
    <fragment
        android:id="@+id/categoryWorld"
        android:name="com.americaalyoum.news.category.CategoryWorld"
        android:label="@string/world_news"
        tools:layout="@layout/category_world" />
    <fragment
        android:id="@+id/categoryEgypt"
        android:name="com.americaalyoum.news.category.CategoryEgypt"
        android:label="@string/egypt_news"
        tools:layout="@layout/category_egypt" />
    <fragment
        android:id="@+id/categoryImmigration"
        android:name="com.americaalyoum.news.category.CategoryImmigration"
        android:label="@string/immigration_news"
        tools:layout="@layout/category_immigration" />
    <fragment
        android:id="@+id/categoryArabAmerica"
        android:name="com.americaalyoum.news.category.CategoryArabAmerica"
        android:label="@string/arab_america_news"
        tools:layout="@layout/category_arab_america" />
    <fragment
        android:id="@+id/categoryInAmerica"
        android:name="com.americaalyoum.news.category.CategoryInAmerica"
        android:label="@string/inamerica_news"
        tools:layout="@layout/category_inamerica" />
    <fragment
        android:id="@+id/categoryJobs"
        android:name="com.americaalyoum.news.category.CategoryJobs"
        android:label="@string/jobs_news"
        tools:layout="@layout/category_jobs" />
    <fragment
        android:id="@+id/categoryUniversities"
        android:name="com.americaalyoum.news.category.CategoryUniversities"
        android:label="@string/universities_news"
        tools:layout="@layout/category_universities" />
    <fragment
        android:id="@+id/categoryEntertainment"
        android:name="com.americaalyoum.news.category.CategoryEntertainment"
        android:label="@string/entertainment_news"
        tools:layout="@layout/category_entertainment" />
    <fragment
        android:id="@+id/categoryFinance"
        android:name="com.americaalyoum.news.category.CategoryFinance"
        android:label="@string/finance_news"
        tools:layout="@layout/category_finance" />
    <fragment
        android:id="@+id/categoryHealth"
        android:name="com.americaalyoum.news.category.CategoryHealth"
        android:label="@string/health_news"
        tools:layout="@layout/category_health" />
    <fragment
        android:id="@+id/categoryInformation"
        android:name="com.americaalyoum.news.category.CategoryInformation"
        android:label="@string/information_news"
        tools:layout="@layout/category_information" />
    <fragment
        android:id="@+id/categorySport"
        android:name="com.americaalyoum.news.category.CategorySport"
        android:label="@string/sport_news"
        tools:layout="@layout/category_sport" />
    <fragment
        android:id="@+id/categoryTechnology"
        android:name="com.americaalyoum.news.category.CategoryTechnology"
        android:label="@string/technology_news"
        tools:layout="@layout/category_technology" />
</navigation>